--- a/CiscoLogo.html
+++ b/CiscoLogo.html
@@ -8,6 +8,8 @@
 
 </head>
 
+<!--This is a recreation of Cisco's Logo using SVG images and the D3.js library-->
+
 <body>
     <script>
     var dataSet = function(){
@@ -54,7 +56,6 @@
     div.bar{
         display: inline-block;
         width: 20px;
-/*        height: 75px;  We'll override height later */
         background-color: #1B4175;
         margin-right: 30px;
         border-radius: 10px;
