--- a/CiscoLogo.html
+++ b/CiscoLogo.html
@@ -5,6 +5,7 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Montserrat|Viga" rel="stylesheet">
+    <title>Cisco Logo</title>
 
 </head>
 
